[BDCS-3600] Fixed up docs to match even information better

--- a/source/includes/api/auth/_hold-codes.md.erb
+++ b/source/includes/api/auth/_hold-codes.md.erb
@@ -4,61 +4,67 @@
 
 ### account_issue_apple_pay_on_file
 
-We're unable to update your payment method because your iTunes payments are made with Apple Pay. Please update your payment method directly in Apple Pay.
+Your payment method could not be updated because your iTunes payments are made via Apple Pay. Please update your payment method directly through Apple Pay.
 
 <label class="tag">CardSwap</label>
 
 ### account_issue_disney_plus_third_party_on_file
 
-Your Disney+ subscription payments are made through a third-party provider (such as iTunes, Verizon, or a bundle).
+Your Disney+ subscription is currently being paid by a third party provider such as iTunes, Verizon, or the Disney bundle. Sign in to your Disney+ account if you want to change the payment method to your card.
 
 <label class="tag">CardSwap</label>
 
 ### account_issue_payment_details_required
 
-This provider requires additional information. Please contact the provider to update your payment method.
+This provider requires additional information. Contact them directly to update your payment method.
 
 <label class="tag">CardSwap</label>
 
 ### account_issue_with_swap
 
-We're unable to update your payment method because of an issue with your account. Please try again later.
+We couldn't update your payment method because of an issue with your account. Please go to the provider directly to update your payment method.
 
 <label class="tag">CardSwap</label>
 
 ### account_issue_primary_account_holder
 
-We're unable to update your payment method because you are not the primary account holder for this provider.
+We can't update your payment method because you aren't the primary account holder for this provider. Please provide the username and password of the main account holder.
 
 <label class="tag">CardSwap</label>
 
 ### account_issue_card_not_accepted
 
-We're unable to update your payment method because this card is not accepted by the provider.
+We can't update your payment method because this card isn't accepted by the provider. Contact the provider directly to resolve this issue, then try again.
 
 <label class="tag">CardSwap</label>
 
 ### account_issue_max_cards_on_file
 
-We're unable to update your payment method because you have the max amount of cards on file. Please log in to the provider's website to remove a payment method and try again.
+We can't update your payment method because the provider won't allow any more cards to be added. Please sign in directly on the provider's website to remove a payment method and try again.
 
 <label class="tag">CardSwap</label>
 
 ### account_issue_third_party_connected
 
-We're unable to update your payment method because payments are made through a third-party provider (such as PayPal or Google Play).
+We couldn't update your payment method because you're paying for your subscription through a third-party provider (like PayPal or Google Play). Please go to the third-party provider directly to update your payment method.
 
 <label class="tag">CardSwap</label>
 
 ### account_issue_third_party_available
 
-We're unable to update your payment method because payments are made through iTunes or Amazon. To change your payment method, select iTunes or Amazon from the list of providers and add your card.
+We couldn't update your payment method because you're paying for your subscription through a third party, such as iTunes or Amazon. To change your payment method, select the third party from the list of providers to add your card.
 
 <label class="tag">CardSwap</label>
 
 ### account_issue_no_active_subscription
 
-We're unable to add your card because you do not have an active subscription with this provider. Please activate your subscription and try again.
+We couldn't add your card because you don't have an active subscription with this provider. Please activate your subscription and try again.
+
+<label class="tag">CardSwap</label>
+
+### system_issue_with_swap
+
+We couldn't update your payment method because of a technical problem. Please try again.
 
 <label class="tag">CardSwap</label>
 
@@ -68,9 +74,9 @@ Your account is not set up for online payments. Log in to your account and set u
 
 <label class="tag">Biller Direct</label>
 
-### system_issue_with_swap
+### partner_expiration_exceeded
 
-We're unable to update your payment method because of a system issue. Please try again later.
+This request has exceeded your financial institution's expiration policy.
 
 <label class="tag">CardSwap</label>
 
@@ -98,6 +104,7 @@ Please log in to your account and add a service account.
 
 <label class="tag">Biller Direct</label>
 
+
 <!--
 
 These are Biller Direct holds we'll add in later
@@ -116,13 +123,13 @@ We're unable to access your bill information because of a system issue. Please t
 
 ### system_issue_with_bill_payment
 
-We're unable to submit this payment because of a system issue. Please try again later.
+We're unable to submit this payment because of a system issue.  Please try again later.
 
 <label class="tag">Biller Direct</label>
 
 ### account_paid_in_full
 
-Your account balance has already been paid in full.
+We’re unable to locate a balance on your account because it is paid in full.
 
 <label class="tag">Biller Direct</label>
 
