--- a/source/includes/api/auth/_status.md.erb
+++ b/source/includes/api/auth/_status.md.erb
@@ -48,7 +48,7 @@
       "identifier": "1j5k2l1"
     },
     {
-      "answer": "What is your favorite food?",
+      "question": "What is your favorite food?",
       "identifier": "3buw78h3"
     }]
   }
