--- a/source/includes/events/_auth.deleted.md.erb
+++ b/source/includes/events/_auth.deleted.md.erb
@@ -32,5 +32,6 @@ When a client deletes an auth.
 Attribute | Description
 --------- | -----------
 `type` | `auth.deleted`
-`payload.data.resource.id` | The ID of the auth that was deleted.
+`payload.resource.id` | The ID of the auth that was deleted.
+`payload.resource.type` | The type of resource referred to by the resource.id. Value: `auth`.
 `payload.data.company` | The [company object](#the-company-object) linked to this resource.
