--- a/source/includes/events/_auth.hold.md.erb
+++ b/source/includes/events/_auth.hold.md.erb
@@ -9,17 +9,18 @@
     "type": "auth.hold",
     "created": "2016-04-20T16:51:12Z",
     "clientId": "579b695decfa110127118752",
-    "partnerId": "55942f330cfcfd6c4ed529d9",    
-    "identifier": "example-id-123",          
+    "partnerId": "55942f330cfcfd6c4ed529d9",
+    "identifier": "example-id-123",
     "payload": {
       "resource": {
         "type": "auth",
         "id": "579b695decfa11012711875d"
       },
-      "data": { 
+      "data": {
         "hold" : {
-          "text" : "You need to login and activate your account."
-        }, 
+          "code" : "account_issue_no_service_account",
+          "text" : "Please login and add your service account."
+        },
         "company" : {
           "_id" : "55942f330cfcfd6c4ed529d8",
           "name" : "Geico"
@@ -35,5 +36,7 @@ When an auth receives a hold that prevents access to the account data.
 Attribute | Description
 --------- | -----------
 `type` | `auth.hold`
+`payload.resource.id` | The ID of the auth that was put on hold.
+`payload.resource.type` | The type of resource referred to by the resource.id. Value: `auth`.
 `payload.data.hold` | The hold placed on the account.
 `payload.data.company` | The [company object](#the-company-object) linked to this resource.
