--- a/source/includes/events/_auth.needs-resync.md.erb
+++ b/source/includes/events/_auth.needs-resync.md.erb
@@ -32,5 +32,6 @@ When an auth requires the client to re-verify credentials.
 Attribute | Description
 --------- | -----------
 `type` | `auth.needs-resync`
-`payload.data.resource.id` | The ID of the auth that needs to be resynced.
+`payload.resource.id` | The ID of the auth that needs to be resynced.
+`payload.resource.type` | The type of resource referred to by the resource.id. Value: `auth`.
 `payload.data.company` | The [company object](#the-company-object) linked to this resource.
