[BDCS-3600] Updated change log

--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -55,3 +55,6 @@
 
 ### Jun 29th, 2020
 - Added revised message security to describe [AES/RSA message encryption ](#message-security)
+
+### Sep 3rd, 2020
+- Updated event information for auth and swap events
