[BDCS-3581] Fixed up docs for tweaks to JWK output

--- a/source/includes/api/partner/_public-keys.md.erb
+++ b/source/includes/api/partner/_public-keys.md.erb
@@ -15,17 +15,19 @@ curl "<%= config.host %>/partner/public-keys" \
   "keys": [
     {
       "kty": "RSA",
-      "n": "-----BEGIN PUBLIC KEY-----MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKB...",
+      "n": "yn8Ek5WFlw0YIsXpjqC7_MCN4OfUAUVp3tje...",
       "e": "AQAB",
       "use": "enc",
-      "kid": "5b4cdadf8ea75a6602ff82bb"
+      "kid": "5b4cdadf8ea75a6602ff82bb",
+      "x5c": "MIIFczCCBFugAwIBAgISBB/csS+OpHRTGG..."
     },
     {
       "kty": "RSA",
-      "n": "-----BEGIN PUBLIC KEY-----MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiABC...",
+      "n": "yn8Ek5WFlw0YIsXpjqC7_MCN4OfUAUVp33ds...",
       "e": "AQAB",
       "use": "enc",
-      "kid": "5b4cdadf8ea75a6602ff82bc"
+      "kid": "5b4cdadf8ea75a6602ff82bc",
+      "x5c": "MIIFczCCBFugAwIBAgISBB/csS+OpHRTGG..."
     }
   ]
 }
