--- a/source/includes/api/partner/_public-key.md.erb
+++ b/source/includes/api/partner/_public-key.md.erb
@@ -13,7 +13,7 @@ curl "<%= config.host %>/partner/public-keys/{keyId}" \
 ```json
 {
   "kty": "RSA",
-  "n": "-----BEGIN PUBLIC KEY-----MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKB...",
+  "n": "yn8Ek5WFlw0YIsXpjqC7_MCN4OfUAUVp3tje...",
   "e": "AQAB",
   "use": "enc",
   "kid": "5b4cdadf8ea75a6602ff82bb"
