[BDCS-3581] Fixed up docs for tweaks to JWK output

--- a/source/includes/api/partner/_public-key.md.erb
+++ b/source/includes/api/partner/_public-key.md.erb
@@ -16,7 +16,8 @@ curl "<%= config.host %>/partner/public-keys/{keyId}" \
   "n": "yn8Ek5WFlw0YIsXpjqC7_MCN4OfUAUVp3tje...",
   "e": "AQAB",
   "use": "enc",
-  "kid": "5b4cdadf8ea75a6602ff82bb"
+  "kid": "5b4cdadf8ea75a6602ff82bb",
+  "x5c": "MIIFczCCBFugAwIBAgISBB/csS+OpHRTGG..."
 }
 ```
 
