[BDCS-3675] Added instructions to test "testhold" credential.

--- a/source/includes/_introduction.md.erb
+++ b/source/includes/_introduction.md.erb
@@ -54,6 +54,7 @@ Input | Description
 ----- | -----------
 `test` | Test a successful authentication.
 `testfail` | Test an authentication failure.
+`testhold` | Test an authentication hold.
 `testmfaquestion` | Test an authentication requiring question-based MFA.
 `testmfacode` | Test an authentication requiring code-based MFA.
 `testmfaprompt` | Test an authentication requiring prompt-based MFA.
