[BDCS-3737] Upgraded to latest version of slate

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -14,80 +14,107 @@ License for the specific language governing permissions and limitations
 under the License.
 */
 
+
 ////////////////////////////////////////////////////////////////////////////////
 // CUSTOMIZE SLATE
 ////////////////////////////////////////////////////////////////////////////////
 // Use these settings to help adjust the appearance of Slate
+$tg-green: #4b9947;
+$tg-dark-green: #41801a;
+$tg-slate: #2d3033;
+$tg-grey: #6c7279;
+$tg-teal: #65d5d9;
+$tg-red: #F36C60;
+$tg-gold: #FFCE89;
+$tg-blue: #2FA0DC;
+$tg-bermuda-green: #7be3bd;
+$base-grey-10: #f4f4f5;
+$base-grey-5: #FBFCFB;
+$base-grey-30: #e2e6e8;
+$base-grey-70: #a4aeb3;
+$white: #ffffff;
+$black: #000000;
+
 
 // BACKGROUND COLORS
 ////////////////////
-$nav-bg: #393939 !default;
-$examples-bg: #393939 !default;
-$code-bg: #292929 !default;
-$code-annotation-bg: #1c1c1c !default;
-$nav-subitem-bg: #262626 !default;
-$nav-active-bg: #2467af !default;
+$nav-bg: $base-grey-5 !default;
+$examples-bg: rgba(#071B2C, 0.8) !default;
+$code-bg: transparent !default;
+$code-annotation-bg: #071B2C !default;
+$nav-subitem-bg: $base-grey-5 !default;
+$nav-active-bg: $white !default;
+$nav-active-parent-bg: $base-grey-5 !default; // parent links of the current section
 $lang-select-border: #000 !default;
 $lang-select-bg: #222 !default;
-$lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
-$lang-select-pressed-bg: #111 !default; // color of language tab bg when mouse is pressed
-$main-bg: #eaf2f6 !default;
+$lang-select-active-bg: #f6574d  !default; // feel free to change this to blue or something
+$lang-select-pressed-bg: $code-annotation-bg !default; // color of language tab bg when mouse is pressed
+$main-bg: $white !default;
 $aside-notice-bg: #8fbcd4 !default;
 $aside-warning-bg: #c97a7e !default;
 $aside-success-bg: #6ac174 !default;
 $search-notice-bg: #c97a7e !default;
 
+
 // TEXT COLORS
 ////////////////////
-$main-text: #333 !default; // main content text color
-$nav-text: #fff !default;
-$nav-active-text: #fff !default;
-$lang-select-text: #fff !default; // color of unselected language tab text
-$lang-select-active-text: #fff !default; // color of selected language tab text
-$lang-select-pressed-text: #fff !default; // color of language tab text when mouse is pressed
+
+$main-text: $tg-slate !default; // main content text color
+$nav-text: $tg-grey !default;
+$nav-active-text: $main-text !default;
+$nav-active-parent-text: $main-text !default; // parent links of the current section
+$nav-footer-text: $base-grey-70 !default;
+$content-link: $tg-green !default;
+$content-link-hover: $tg-dark-green !default;
+$code: $tg-red !default;
+$lang-select-text: $white !default; // color of unselected language tab text
+$lang-select-active-text: $white !default; // color of selected language tab text
+$lang-select-pressed-text: $white !default; // color of language tab text when mouse is pressed
+
 
 // SIZES
 ////////////////////
-$nav-width: 230px !default; // width of the navbar
+$nav-width: 240px !default; // width of the navbar
 $examples-width: 50% !default; // portion of the screen taken up by code examples
-$logo-margin: 20px !default; // margin between nav items and logo, ignored if search is active
+$logo-margin: 20px auto 20px !default; // margin below logo
 $main-padding: 28px !default; // padding to left and right of content & examples
-$nav-padding: 15px !default; // padding to left and right of navbar
-$nav-v-padding: 10px !default; // padding used vertically around search boxes and results
-$nav-indent: 10px !default; // extra padding for ToC subitems
+$nav-padding: 10px !default; // padding to left and right of navbar
+$nav-v-padding: 5px !default; // padding used vertically around search boxes and results
+$nav-indent: 15px !default; // extra padding for ToC subitems
 $code-annotation-padding: 13px !default; // padding inside code annotations
 $h1-margin-bottom: 21px !default; // padding under the largest header tags
 $tablet-width: 930px !default; // min width before reverting to tablet size
 $phone-width: $tablet-width - $nav-width !default; // min width before reverting to mobile size
 
+
 // FONTS
 ////////////////////
 %default-font {
-  font-family: 'Helvetica Neue', Helvetica, Arial, 'Microsoft Yahei', '微软雅黑', STXihei,
-    '华文细黑', sans-serif;
-  font-size: 13px;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei","微软雅黑", STXihei, "华文细黑", sans-serif;
+  font-size: 14px;
 }
 
 %header-font {
-  @extend %default-font;
-  font-weight: bold;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei","微软雅黑", STXihei, "华文细黑", sans-serif;
+  font-weight: 500;
 }
 
 %code-font {
-  font-family: Consolas, Menlo, Monaco, 'Lucida Console', 'Liberation Mono', 'DejaVu Sans Mono',
-    'Bitstream Vera Sans Mono', 'Courier New', monospace, serif;
-  font-size: 12px;
+  font-family: Consolas, Menlo, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace, serif;
   line-height: 1.5;
+  font-size: 14px;
 }
+
 
 // OTHER
 ////////////////////
-$nav-active-shadow: #000;
-$nav-footer-border-color: #666;
-$nav-embossed-border-top: #000;
-$nav-embossed-border-bottom: #939393;
-$main-embossed-text-shadow: 0px 1px 0px #fff;
-$search-box-border-color: #666;
+$border-radius: 3px;
+$border-color: $base-grey-30;
+$solid-border: 1px solid $border-color;
+$dotted-border: 1px dotted $border-color;
+$nav-footer-border-color: #666 !default;
+$search-box-border-color: #666 !default;
+
 
 ////////////////////////////////////////////////////////////////////////////////
 // INTERNAL
@@ -95,6 +122,6 @@ $search-box-border-color: #666;
 // These settings are probably best left alone.
 
 %break-words {
-  word-break: break-all;
-  hyphens: auto;
+    word-break: break-all;
+    hyphens: auto;
 }
