[BDCS-3737] Some further style fixes and removed changelog

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -19,8 +19,9 @@ under the License.
 // CUSTOMIZE SLATE
 ////////////////////////////////////////////////////////////////////////////////
 // Use these settings to help adjust the appearance of Slate
-$tg-green: #4b9947;
+$tg-green: #76B546;
 $tg-dark-green: #41801a;
+$tg-code-green: #7BCF82;
 $tg-slate: #2d3033;
 $tg-grey: #6c7279;
 $tg-teal: #65d5d9;
