[BDCS-3780] Added documentation for all of the new request and webhook security features

--- a/source/includes/events/_index.md.erb
+++ b/source/includes/events/_index.md.erb
@@ -1,4 +1,4 @@
-# Event
+# Events
 
 Events are our way of letting you know when something interesting happens on behalf of your users.
 When an interesting event occurs, we create a new `Event` object. For example, when a new bill is received, we create a `bill.update` event; when a bill payment is sent, we create a `bill.payment` event.
