--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -7,7 +7,7 @@ includes:
   - errors
   - request-id
   - getting-started
-  - rsa-encryption
+  - message-security
   - products/integration
   - products/connect
   - products/cardswap
@@ -78,6 +78,7 @@ includes:
   - events/bill.payment.cancelled
   - events/bill.payment.failed
   - events/swap.success
+  - events/webhook.security
 
 search: true
 ---
