--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -388,8 +388,12 @@ html, body {
     margin-bottom: 0.8em;
   }
 
-  h4, h5, h6 {
-    font-size: 10px;
+  h4 {
+    font-size: 16px;
+  }
+
+  h5, h6 {
+    font-size: 15px;
   }
 
   hr {
